--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -189,8 +189,10 @@
      <string>File</string>
     </property>
     <addaction name="actionNew_Script"/>
-    <addaction name="actionSave_Script"/>
     <addaction name="actionLoad_Script"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_Script"/>
+    <addaction name="actionSave_Script_As"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
@@ -216,6 +218,9 @@
    </property>
   </action>
   <action name="actionSave_Script">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Save Script</string>
    </property>
@@ -242,6 +247,14 @@
   <action name="actionConnect_to_Server">
    <property name="text">
     <string>Connect to Server</string>
+   </property>
+  </action>
+  <action name="actionSave_Script_As">
+   <property name="text">
+    <string>Save Script As</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
  </widget>
