Working on file save/load

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -185,6 +185,9 @@
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
+    <property name="tearOffEnabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>File</string>
     </property>
