--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -104,6 +104,9 @@
               <property name="text">
                <string>Title</string>
               </property>
+              <property name="buddy">
+               <cstring>titleInput</cstring>
+              </property>
              </widget>
             </item>
             <item>
@@ -111,12 +114,18 @@
               <property name="text">
                <string>Foreground</string>
               </property>
+              <property name="buddy">
+               <cstring>fgInput</cstring>
+              </property>
              </widget>
             </item>
             <item>
              <widget class="QLabel" name="bgLabel">
               <property name="text">
                <string>Background</string>
+              </property>
+              <property name="buddy">
+               <cstring>bgInput</cstring>
               </property>
              </widget>
             </item>
@@ -264,6 +273,16 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <tabstops>
+  <tabstop>titleInput</tabstop>
+  <tabstop>fgInput</tabstop>
+  <tabstop>bgInput</tabstop>
+  <tabstop>textInput</tabstop>
+  <tabstop>slideList</tabstop>
+  <tabstop>broadcastButton</tabstop>
+  <tabstop>newSlideButton</tabstop>
+  <tabstop>deleteSlideButton</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
