--- a/SlideDisplay.ui
+++ b/SlideDisplay.ui
@@ -37,14 +37,14 @@
      <property name="text">
       <string>TextLabel</string>
      </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::LinksAccessibleByMouse</set>
      </property>
     </widget>
    </item>
