--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -212,6 +212,8 @@
     <addaction name="actionBroadcast_Current"/>
     <addaction name="actionNext"/>
     <addaction name="actionPrevious"/>
+    <addaction name="separator"/>
+    <addaction name="actionEmergency"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuConnection"/>
@@ -302,6 +304,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Left</string>
+   </property>
+  </action>
+  <action name="actionEmergency">
+   <property name="text">
+    <string>Emergency</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
    </property>
   </action>
  </widget>
