--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -49,7 +49,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_2">
+           <widget class="QPushButton" name="upArrow">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -75,7 +75,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="downArrow">
             <property name="enabled">
              <bool>false</bool>
             </property>
